# pipe-bolt

./: .env.example.dev  .gitignore  .graphifyignore  Cargo.toml  README.md  architecture-altv2.md  mise.toml  pipe-bolt.project.json  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
apps/web/: .gitignore  .oxlintrc.json  env.d.ts  eslint.config.ts  index.html  openapi-ts.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  vitest.config.ts
apps/web/e2e/: smoke.spec.ts
apps/web/e2e/fixtures/: api.ts
apps/web/scripts/: check-api-contract.mjs
apps/web/src/: main.ts
apps/web/src/api/: client.ts  errors.ts
apps/web/src/app/: AppShell.vue  router-meta.d.ts  router.ts  styles.css
apps/web/src/auth/: LoginView.vue  auth.guard.ts  auth.routes.ts  auth.store.ts  index.ts
apps/web/src/auth/composables/: useAuthBootstrap.ts
apps/web/src/commands/: CommandTemplatesView.vue  commands.api.ts  commands.routes.ts  commands.template.ts  commands.types.ts  index.ts
apps/web/src/commands/components/: CommandExecuteDialog.vue  CommandExecutionReceipt.vue  CommandTemplateList.vue
apps/web/src/commands/composables/: useCommandExecution.ts  useCommandTemplates.ts
apps/web/src/config/: ConfigEditorView.vue  config.api.ts  config.routes.ts  config.store.ts  config.validation.ts  index.ts
apps/web/src/config/components/: BrokerEditor.vue  CommandTemplateEditor.vue  ConfigGeneralEditor.vue  RawJsonEditor.vue  RouteEditor.vue  SchemaMappingEditor.vue  SecretInput.vue  SinkEditor.vue
apps/web/src/config/composables/: useConfigDraft.ts  useSecretMasking.ts  useUnsavedChangesGuard.ts
apps/web/src/operations/: AuditLogView.vue  DeliveryOutcomesView.vue  FailuresView.vue  OperationsLayout.vue  index.ts  operations.api.ts  operations.format.ts  operations.routes.ts
apps/web/src/operations/components/: AuditLogTable.vue  DeliveryOutcomeTable.vue  FailureTable.vue  OperationStatusBadge.vue  OperationalPager.vue  ResolveFailureDialog.vue
apps/web/src/operations/composables/: useOperations.ts
apps/web/src/projects/: ProjectLayout.vue  ProjectOverviewView.vue  ProjectSelectView.vue  index.ts  project.store.ts  projects.api.ts  projects.routes.ts
apps/web/src/projects/composables/: useProjectPicker.ts  useProjectRuntimeStatus.ts
apps/web/src/realtime/: RealtimeEventsView.vue  index.ts  realtime.api.ts  realtime.buffer.spec.ts  realtime.buffer.ts  realtime.filters.spec.ts  realtime.filters.ts  realtime.routes.ts  realtime.types.ts  realtime.validation.ts
apps/web/src/realtime/components/: RealtimeEventDetailDrawer.vue  RealtimeEventTable.vue  RealtimeFilterPanel.vue
apps/web/src/realtime/composables/: useRealtimeFilters.ts  useRealtimeStream.ts
apps/web/src/rules/: RuleBuilderView.vue  RuleListView.vue  index.ts  rules.api.ts  rules.mapper.spec.ts  rules.mapper.ts  rules.routes.ts  rules.types.ts  rules.validation.ts
apps/web/src/rules/components/: RuleActionsEditor.vue  RuleBasicForm.vue  RuleConditionBuilder.vue  RuleConditionNode.vue  RuleFieldEditor.vue  RuleJsonPreview.vue  RuleList.vue  RuleValueEditor.vue
apps/web/src/rules/composables/: useRuleDraft.ts  useRuleUnsavedGuard.ts  useRulesConfig.ts
apps/web/src/runtime/: RuntimeStatusView.vue  index.ts  runtime.api.ts  runtime.routes.ts
apps/web/src/runtime/components/: ReloadRuntimeButton.vue  RuntimeStatusCard.vue
apps/web/src/runtime/composables/: useRuntimeReload.ts  useSystemStatus.ts
crates/pipe-bolt-api/: Cargo.toml
crates/pipe-bolt-api/examples/: export_openapi.rs
crates/pipe-bolt-api/src/: auth.rs  dto.rs  error.rs  handler.rs  lib.rs  model.rs  openapi.rs  realtime.rs  router.rs  runtime_control.rs  state.rs  storage.rs
crates/pipe-bolt-api/tests/: management_api.rs
crates/pipe-bolt-core/: Cargo.toml
crates/pipe-bolt-core/src/: action_metadata.rs  bus.rs  command.rs  error.rs  forwarder.rs  lib.rs
crates/pipe-bolt-core/src/dispatcher/: action.rs  mod.rs
crates/pipe-bolt-core/src/message/: envelope.rs
crates/pipe-bolt-core/src/mqtt/: backoff.rs  engine.rs  mod.rs
crates/pipe-bolt-core/src/pipeline/: mod.rs  normalizer.rs  router.rs
crates/pipe-bolt-core/src/router/: matcher.rs
crates/pipe-bolt-core/src/rule/: mod.rs  rules.rs
crates/pipe-bolt-core/src/web/: mod.rs
crates/pipe-bolt-core/src/web/realtime/: command.rs  dto.rs  error.rs  filter.rs  mod.rs  router.rs  sse.rs  state.rs  utils.rs  websocket.rs
crates/pipe-bolt-daemon/: Cargo.toml
crates/pipe-bolt-daemon/src/: config_loader.rs  main.rs  persistence_writer.rs  runtime.rs  runtime_control.rs
crates/pipe-bolt-domain/: Cargo.toml
crates/pipe-bolt-domain/src/: action.rs  command.rs  config.rs  error.rs  event.rs  id.rs  lib.rs  rule.rs
crates/pipe-bolt-storage/: Cargo.toml
crates/pipe-bolt-storage/src/: error.rs  lib.rs  model.rs  postgres.rs  project_config_codec.rs  secret.rs
crates/pipe-bolt-storage/tests/: postgres_storage.rs
migrations/: 20260620153531_persistence-layer.sql
payload-tests/: telemetry-warning.json
src/: bus.rs  codec.rs  command.rs  config.rs  error.rs  main.rs
src/message/: envelope.rs  mod.rs
src/mqtt/: backoff.rs  engine.rs
src/router/: matcher.rs  mod.rs
src/web/: realtime.rs
src/web/realtime/: command.rs  dto.rs  error.rs  filter.rs  sse.rs  state.rs  utils.rs  websocket.rs
test-mqtt/config/: pipe-bolt.project.json  tmp_config_update.json
test-mqtt/payload-tests/: command-relay-on-expected.json  telemetry-normal.json
yaak/: yaak.fl_38jkvEMWeo.yaml  yaak.fl_Ld5EMBELko.yaml  yaak.rq_5fFwbgA2PR.yaml  yaak.rq_5zPhXhkEZs.yaml  yaak.rq_RbwKdqvqiM.yaml  yaak.rq_RiCcQ4VhKV.yaml  yaak.rq_WG87scCsz4.yaml  yaak.rq_ZLX8s4tct8.yaml  yaak.rq_aTkhEtg6rY.yaml  yaak.rq_pHUvpEBM7J.yaml  yaak.rq_voKLSiKFZT.yaml  yaak.rq_y79pWsodc9.yaml  yaak.wk_RswPFWqsc9.yaml
