[workspace]
resolver = "3"
members = [
    "crates/pipe-bolt-core",
    "crates/pipe-bolt-daemon", "crates/pipe-bolt-domain",
]

[profile.deployment]
inherits = "release"
debug = false
opt-level = 3
strip = "none"
overflow-checks = false
debug-assertions = false
rpath = false
lto = "thin"
panic = "abort"
codegen-units = 1
incremental = false
