[workspace]
resolver = "3"
members = ["crates/pipe-bolt-api",
    "crates/pipe-bolt-core",
    "crates/pipe-bolt-daemon",
    "crates/pipe-bolt-domain",
    "crates/pipe-bolt-storage",
]

[workspace.dependencies]
tokio = "1.52.3"
serde = "1.0.228"
serde_json = "1.0.150"
serde_bytes = "0.11.19"
aes-gcm = "0.10.3"
base64 = "0.22.1"
rand = "0.10.1"
sha2 = "0.11.0"
sqlx = { version = "0.9.0", default-features = false }
salvo = "0.93"
salvo-minimal = {package = "salvo", version = "0.93", default-features = false}
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
time = "0.3.51"
reqwest = "0.13.4"
uuid = "1.23.3"
rumqttc = "0.25.1"
async-trait = "0.1.89"
async-stream = "0.3.6"
futures-util = "0.3.32"
dotenvy = "0.15.7"
subtle = "2.6.1"

[profile.deploy]
inherits = "release"
debug = false
opt-level = 3
strip = "none"
overflow-checks = false
debug-assertions = false
rpath = false
lto = "thin"
panic = "abort"
codegen-units = 1
incremental = false

[profile.profiling]
inherits = "release"
debug = true

[profile.dev.package.sqlx-macros]
opt-level = 3