[package]
name = "pipe-bolt-api"
version = "0.1.0"
edition = "2024"
resolver = "3"

[lib]
path = "src/lib.rs"

[dependencies]
pipe-bolt-domain = { path = "../pipe-bolt-domain" }
pipe-bolt-storage = { path = "../pipe-bolt-storage" }

base64 = { workspace = true }
salvo = { workspace = true, features = ["affix-state", "oapi"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
time = { workspace = true, features = ["formatting", "parsing", "serde", "serde-well-known"] }
tokio = { workspace = true, features = ["macros", "sync"] }
subtle = { workspace = true }

[dev-dependencies]
salvo = { workspace = true, features = ["test"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }