[package]
name = "pipe-bolt-core"
version = "0.1.0"
edition = "2024"
resolver = "3"

[lib]
path = "src/lib.rs"

[dependencies]
pipe-bolt-domain = { path = "../pipe-bolt-domain" }
rumqttc = "0.25.1"
tokio = { version = "1.52.3", features = ["full"] }
salvo = { version = "0.93.0", features = ["affix-state", "sse", "websocket"] }
serde = { version = "1.0.228", features = ["default", "derive"] }
serde_json = "1.0.150"
async-stream = "0.3.6"
base64 = "0.22.1"
futures-util = "0.3.32"
uuid = { version = "1.23.3", features = ["v7"] }
thiserror = "2.0.18"
time = "0.3.47"
