[package]
name = "pipe-bolt-core"
version = "0.1.0"
edition = "2024"
resolver = "3"

[lib]
path = "src/lib.rs"

[dependencies]
pipe-bolt-domain = { path = "../pipe-bolt-domain" }

rumqttc = { workspace = true }
tokio = { workspace = true, features = ["full"] }
salvo = { workspace = true, features = ["affix-state", "sse", "websocket"] }
serde = { workspace = true, features = ["default", "derive"] }
serde_json = { workspace = true }
async-stream = { workspace = true }
base64 = { workspace = true }
futures-util = { workspace = true }
uuid = { workspace = true, features = ["v7"] }
thiserror = { workspace = true }
time = { workspace = true }
reqwest = { workspace = true, features = ["stream"] }
