[package]
name = "pipe-bolt-daemon"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "pipe-bolt-daemon"
path = "src/main.rs"

[dependencies]
pipe-bolt-core = { path = "../pipe-bolt-core" }
pipe-bolt-domain = { path = "../pipe-bolt-domain" }
pipe-bolt-storage = { path = "../pipe-bolt-storage" }
pipe-bolt-api = { path = "../pipe-bolt-api" }

tokio = { workspace = true, features = ["full"] }
rumqttc = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
tracing = { workspace = true }
dotenvy = { workspace = true, optional = true }
time = { workspace = true, features = ["formatting", "parsing", "serde", "serde-well-known"] }
async-trait = { workspace = true }

[features]
dev = [
    "dotenvy",
    "pipe-bolt-domain/salvo-oapi",
    "pipe-bolt-api/salvo-oapi"
]
dotenvy = ["dep:dotenvy"]
