[package]
name = "pipe-bolt-domain"
version = "0.1.0"
edition = "2024"
resolver = "3"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_bytes = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true, features = ["formatting", "parsing", "serde", "serde-well-known"] }
