[package]
name = "pipe-bolt-storage"
version = "0.1.0"
edition = "2024"
resolver = "3"

[lib]
path = "src/lib.rs"

[dependencies]
pipe-bolt-domain = { path = "../pipe-bolt-domain" }

aes-gcm = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
sqlx = { workspace = true, default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "json",
    "time",
    "uuid",
    "migrate",
    "macros"
] }
thiserror = { workspace = true }
time = { workspace = true, features = ["serde", "serde-well-known"] }
uuid = { workspace = true, features = ["v7", "serde"] }
tokio = { workspace = true, features = ["macros"] }